## Process this file with automake to produce Makefile.in
###############################################################################
#
# File:         Makefile.am
# RCS:          $Header: /mount/cello/cvs/Lintel/Makefile.am,v 1.1 2005/02/14 04:36:49 anderse Exp $
# Description:  Automake input file to generate Makefile.in for configure
# Author:       Eric Anderson
# Created:      Tue Jan  4 09:49:12 2005
# Modified:     Wed Jan 19 17:23:21 2005 (Eric Anderson) anderse@hpl.hp.com
# Language:     Makefile
# Package:      N/A
# Status:       Experimental (Do Not Distribute)
#
# (C) Copyright 2005, Hewlett-Packard Laboratories, all rights reserved.
#
###############################################################################

# avoid requiring all GNUisms
AUTOMAKE_OPTIONS = 1.7 foreign

SUBDIRS = include src

aclocaldir = $(datadir)/aclocal
aclocal_DATA = com_hp_hpl_lintel.m4

